Update now formatting for nownownow

--- a/_posts/now/2024-05-13-may-2024.md
+++ b/_posts/now/2024-05-13-may-2024.md
@@ -5,7 +5,7 @@ title: May 2024
 date: 2024-05-13
 ---
 
-Right now, I am...
+Right now, May 2024, I am...
 * Supporting the FC Gameplay team as we approach Alpha on *FC 25*
 * Preparing to travel to Germany for the international conference on [Agency, Analog Tabletop Role-Playing Games, and Asymmetrical Dependency](https://www.fiw.uni-bonn.de/en/news/international-conference-on-agency-analog-tabletop-role-playing-games-and-asymmetrical-dependency) at the Bonn Lab for Analog Games and Imaginative Play
 * Continuing work on my CGSA paper on *Starfield*
