--- a/_posts/now/2024-12-17-december-2024.md
+++ b/_posts/now/2024-12-17-december-2024.md
@@ -5,7 +5,7 @@ title: December 2024
 date: 2024-12-17
 ---
 
-Right now, I am...
+Right now, December 2024, I am...
 
 * Wrapping preproduction on *FC 26*
 * Grading final projects for Interactive Storytelling
