--- a/_posts/now/2023-11-11-november-2023.md
+++ b/_posts/now/2023-11-11-november-2023.md
@@ -5,4 +5,4 @@ title: November 2023
 date: 2023-11-11
 ---
 
-Currently, I am working on preproduction for *FC 25*, reading Jordan's *The Fires of Heaven* and Zola's *Germinal*, teaching GAME 260: Project Management for Video Games, preparing to teach GAME 340: Advanced Game Design, trying to finish my essay series on Deleuze's *Empiricism and Subjectivity*, and cleaning up the website and my repository of projects.
+Right now, November 2023, I am working on preproduction for *FC 25*, reading Jordan's *The Fires of Heaven* and Zola's *Germinal*, teaching GAME 260: Project Management for Video Games, preparing to teach GAME 340: Advanced Game Design, trying to finish my essay series on Deleuze's *Empiricism and Subjectivity*, and cleaning up the website and my repository of projects.
