--- a/_posts/now/2025-09-14-september-2025.md
+++ b/_posts/now/2025-09-14-september-2025.md
@@ -5,7 +5,7 @@ title: September 2025
 date: 2025-09-14
 ---
 
-Right now, I am...
+Right now, September 2025, I am...
 
 * Playing *Hollow Knight: Silksong*
 * Reading *Count Zero*
