--- a/_posts/about/2025-09-20-september-2025.md
+++ b/_posts/about/2025-09-20-september-2025.md
@@ -5,7 +5,7 @@ title: September 2025
 date: 2025-09-20
 ---
 
-I am a gameplay producer at EA SPORTS, currently working across user-experience research, data analytics, quality management, and organisation design.
+I am a multidisciplinary gameplay producer at EA SPORTS, currently working across user-experience research, data analytics, quality management, and organisation design.
 
 My background is in academic game studies and game development education, with experience teaching game design, interactive storytelling, video game aesthetics, and project management.
 
